--- a/src/app/pages/cloth-management/cloth-table/cloth-table.component.html
+++ b/src/app/pages/cloth-management/cloth-table/cloth-table.component.html
@@ -18,7 +18,7 @@
     [rows]="10"
     [paginator]="true"
     responsiveLayout="stack"
-    styleClass="p-datatable-lg"
+    styleClass="p-datatable-lg p-datatable-gridlines"
     [globalFilterFields]="[
       'created_at',
       'key',
