--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
     [value]="orders"
     responsiveLayout="stack"
     [rows]="10"
-    styleClass="p-datatable-lg"
+    styleClass="p-datatable-lg p-datatable-gridlines"
     [paginator]="true"
   >
     <ng-template pTemplate="header" let-columns>
