--- a/src/app/pages/employee-management/employee-management.component.html
+++ b/src/app/pages/employee-management/employee-management.component.html
@@ -20,7 +20,7 @@
     [rows]="10"
     [paginator]="true"
     responsiveLayout="scroll"
-    styleClass="p-datatable-lg"
+    styleClass="p-datatable-lg p-datatable-gridlines"
     #tb
     [globalFilterFields]="['key', 'firstName', 'lastName']"
   >
@@ -41,15 +41,15 @@
     </ng-template>
     <ng-template pTemplate="header">
       <tr>
-        <th class="text-center">ลำดับ</th>
-        <th class="text-center">รหัส</th>
-        <th class="text-center">ชื่อ - นามสกุล</th>
+        <th class="text-center" [style]="{ width: '5%' }">ลำดับ</th>
+        <th class="text-center" [style]="{ width: '10%' }">รหัส</th>
+        <th class="text-center" [style]="{ width: '20%' }">ชื่อ - นามสกุล</th>
         <!-- <th class="text-center">ที่อยู่</th> -->
         <!-- <th class="text-center">เบอร์โทร</th> -->
         <!-- <th class="text-center">อีเมล์</th> -->
-        <th class="text-center">สิทธิ์ผู้ใช้</th>
-        <th class="text-center">สถานะ</th>
-        <th class="text-center"></th>
+        <th class="text-center" [style]="{ width: '35%' }">สิทธิ์ผู้ใช้</th>
+        <th class="text-center" [style]="{ width: '15%' }">สถานะ</th>
+        <th class="text-center" [style]="{ width: '15%' }"></th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-employee let-index="rowIndex">
@@ -268,6 +268,100 @@
         placeholder="โปรดระบุที่อยู่"
       />
     </div>
+
+    <div class="field">
+      <label class="block">จังหวัด</label>
+      <p-dropdown
+        [style]="{ width: '100%' }"
+        [options]="provinces"
+        [(ngModel)]="provinceSelected"
+        optionLabel="name"
+        [filter]="true"
+        filterBy="name"
+        [showClear]="false"
+        placeholder="โปรดเลือก"
+        (onChange)="onSelectedProvince()"
+      >
+        <ng-template pTemplate="selectedItem">
+          <div class="country-item country-item-value" *ngIf="provinceSelected">
+            <div>{{ provinceSelected.name }}</div>
+          </div>
+        </ng-template>
+        <ng-template let-country pTemplate="item">
+          <div class="country-item">
+            <div>{{ country.name }}</div>
+          </div>
+        </ng-template>
+      </p-dropdown>
+    </div>
+
+    <div class="field">
+      <label class="block">อำเภอ</label>
+      <p-dropdown
+        [style]="{ width: '100%' }"
+        [disabled]="!provinceSelected"
+        [options]="districts"
+        [(ngModel)]="districtSelected"
+        optionLabel="name"
+        [filter]="true"
+        filterBy="name"
+        [showClear]="false"
+        (onChange)="onSelectedDistrict()"
+        placeholder="โปรดเลือก"
+      >
+        <ng-template pTemplate="selectedItem">
+          <div class="country-item country-item-value" *ngIf="districtSelected">
+            <div>{{ districtSelected.name }}</div>
+          </div>
+        </ng-template>
+        <ng-template let-country pTemplate="item">
+          <div class="country-item">
+            <div>{{ country.name }}</div>
+          </div>
+        </ng-template>
+      </p-dropdown>
+    </div>
+
+    <!-- <div class="field">
+      <label class="block">ตำบล</label>
+      <p-dropdown
+        [style]="{ width: '100%' }"
+        [disabled]="!districtSelected"
+        [options]="subDistricts"
+        [(ngModel)]="subDistrictSelected"
+        optionLabel="name"
+        [filter]="true"
+        filterBy="name"
+        [showClear]="false"
+        placeholder="โปรดเลือก"
+      >
+        <ng-template pTemplate="selectedItem">
+          <div
+            class="country-item country-item-value"
+            *ngIf="subDistrictSelected"
+          >
+            <div>{{ subDistrictSelected.name }}</div>
+          </div>
+        </ng-template>
+        <ng-template let-country pTemplate="item">
+          <div class="country-item">
+            <div>{{ country.name }}</div>
+          </div>
+        </ng-template>
+      </p-dropdown>
+    </div> -->
+
+    <div class="field">
+      <label for="postAddress" class="block">รหัสไปรษณีย์</label>
+      <input
+        id="postAddress"
+        type="postAddress"
+        pInputText
+        [(ngModel)]="postAddress"
+        placeholder="โปรดระบุเลขไปรษณีย์"
+      />
+    </div>
+
     <div class="field">
       <label for="email" class="block">อีเมล์</label>
       <input
@@ -361,6 +455,100 @@
         placeholder="โปรดระบุที่อยู่"
       />
     </div>
+
+    <div class="field">
+      <label class="block">จังหวัด</label>
+      <p-dropdown
+        [style]="{ width: '100%' }"
+        [options]="provinces"
+        [(ngModel)]="provinceSelected"
+        optionLabel="name"
+        [filter]="true"
+        filterBy="name"
+        [showClear]="false"
+        placeholder="โปรดเลือก"
+        (onChange)="onSelectedProvince()"
+      >
+        <ng-template pTemplate="selectedItem">
+          <div class="country-item country-item-value" *ngIf="provinceSelected">
+            <div>{{ provinceSelected.name }}</div>
+          </div>
+        </ng-template>
+        <ng-template let-country pTemplate="item">
+          <div class="country-item">
+            <div>{{ country.name }}</div>
+          </div>
+        </ng-template>
+      </p-dropdown>
+    </div>
+
+    <div class="field">
+      <label class="block">อำเภอ</label>
+      <p-dropdown
+        [style]="{ width: '100%' }"
+        [disabled]="!provinceSelected"
+        [options]="districts"
+        [(ngModel)]="districtSelected"
+        optionLabel="name"
+        [filter]="true"
+        filterBy="name"
+        [showClear]="false"
+        (onChange)="onSelectedDistrict()"
+        placeholder="โปรดเลือก"
+      >
+        <ng-template pTemplate="selectedItem">
+          <div class="country-item country-item-value" *ngIf="districtSelected">
+            <div>{{ districtSelected.name }}</div>
+          </div>
+        </ng-template>
+        <ng-template let-country pTemplate="item">
+          <div class="country-item">
+            <div>{{ country.name }}</div>
+          </div>
+        </ng-template>
+      </p-dropdown>
+    </div>
+
+    <!-- <div class="field">
+      <label class="block">ตำบล</label>
+      <p-dropdown
+        [style]="{ width: '100%' }"
+        [disabled]="!districtSelected"
+        [options]="subDistricts"
+        [(ngModel)]="subDistrictSelected"
+        optionLabel="name"
+        [filter]="true"
+        filterBy="name"
+        [showClear]="false"
+        placeholder="โปรดเลือก"
+      >
+        <ng-template pTemplate="selectedItem">
+          <div
+            class="country-item country-item-value"
+            *ngIf="subDistrictSelected"
+          >
+            <div>{{ subDistrictSelected.name }}</div>
+          </div>
+        </ng-template>
+        <ng-template let-country pTemplate="item">
+          <div class="country-item">
+            <div>{{ country.name }}</div>
+          </div>
+        </ng-template>
+      </p-dropdown>
+    </div> -->
+
+    <div class="field">
+      <label for="postAddress" class="block">รหัสไปรษณีย์</label>
+      <input
+        id="postAddress"
+        type="postAddress"
+        pInputText
+        [(ngModel)]="postAddress"
+        placeholder="โปรดระบุเลขไปรษณีย์"
+      />
+    </div>
+
     <div class="field">
       <label for="email" class="block">อีเมล์</label>
       <input
