--- a/src/app/pages/customer-management/customer-management.component.scss
+++ b/src/app/pages/customer-management/customer-management.component.scss
@@ -2,8 +2,9 @@
   width: 100%;
   height: 100%;
   background-color: #ffffff;
-  border-radius: .4rem;
-  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  border-radius: 0.4rem;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   position: relative;
   padding: 1rem;
   display: flex;
@@ -24,7 +25,8 @@
     margin-bottom: 1rem;
   }
 
-  & *th , & *td{
+  & *th,
+  & *td {
     text-align: start;
   }
 
@@ -39,5 +41,15 @@
 
   & > *.field > input {
     width: 100%;
+  }
+}
+
+:host ::ng-deep .p-dropdown {
+  width: 14rem;
+}
+
+.country-item-value {
+  img.flag {
+    width: 17px;
   }
 }
