--- a/src/app/pages/texture-cloth-management/texture-cloth-management.component.html
+++ b/src/app/pages/texture-cloth-management/texture-cloth-management.component.html
@@ -16,7 +16,7 @@
     [rows]="10"
     [paginator]="true"
     responsiveLayout="scroll"
-    styleClass="p-datatable-lg"
+    styleClass="p-datatable-lg p-datatable-gridlines"
     #tb
     [globalFilterFields]="[
       'key',
